utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/OptionFillType.ide
package valid

typedef module OptionFillType {
    configuration config: OptionFillTypeConfiguration {
        fill common with "some value"
    }
}
