utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/NoComponentInModule.ide
package invalid

typedef module NoComponentInModule {
    configuration config: NoComponentInModuleConfiguration {
    }
}
